Geometry Nodes - Attribute Transfer node crash when using "Nearest" mapping. #89827

Closed
opened 2021-07-12 23:05:12 +02:00 by Valera Barashkov · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-10 13:52, hash: 49a363f0e0
Worked: NA

Short description of error
Geometry Nodes - Attribute Transfer node crash when using "Nearest" mapping.

Exact steps for others to reproduce the error
Open attached blend file and switch Mapping from "Nearest Face Interpolated" to "Nearest".

GN_crash_data_transfer.blend

GN_crash_data_transfer.crash.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-10 13:52, hash: `49a363f0e0` Worked: NA **Short description of error** Geometry Nodes - Attribute Transfer node crash when using "Nearest" mapping. **Exact steps for others to reproduce the error** Open attached blend file and switch Mapping from "Nearest Face Interpolated" to "Nearest". [GN_crash_data_transfer.blend](https://archive.blender.org/developer/F10222235/GN_crash_data_transfer.blend) [GN_crash_data_transfer.crash.txt](https://archive.blender.org/developer/F10222237/GN_crash_data_transfer.crash.txt)

Added subscriber: @valera-8

Added subscriber: @valera-8
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Not checked yet but possibly the culprit commit is 9009ac2c3d

Described problem is very similar to {#89829}

Edit: Wrong up here, can reproduce the crash with older builds also.

~~Not checked yet but possibly the culprit commit is 9009ac2c3d~~ ~~Described problem is very similar to {#89829}~~ Edit: Wrong up here, can reproduce the crash with older builds also.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-07-20 21:50:52 +02:00
Member

Thanks for the report. The fix looks simple.

Thanks for the report. The fix looks simple.

This issue was referenced by bfe6b55aa7

This issue was referenced by bfe6b55aa706ac5952bd6e887a6e3bfec86de74f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89827
No description provided.