Fix T89827: Attribute transfer node crash on mesh with no faces

Just add a check for whether the mesh has faces when retrieving an
attribute on the corner domain. In the future there could be an info
message in the node in this case, since maybe it's not intuitive.